--- a/TemaHotel/TemaHotel/TemaHotel.csproj
+++ b/TemaHotel/TemaHotel/TemaHotel.csproj
@@ -60,6 +60,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Convertors\UserConvert.cs" />
     <Compile Include="DataAccess\ExceptionMessageComposer.cs" />
     <Compile Include="DataAccess\ExtraSvServiceLayer.cs" />
     <Compile Include="DataAccess\FacilityServiceLayer.cs" />
@@ -135,6 +136,7 @@
   <ItemGroup>
     <Resource Include="Resources\testroom.jpg" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
