--- a/TemaHotel/TemaHotel/TemaHotel.csproj
+++ b/TemaHotel/TemaHotel/TemaHotel.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Utilities\RelayCommand.cs" />
     <Compile Include="ViewModel\MainWindowVm.cs" />
     <Compile Include="ViewModel\MenuCommands.cs" />
+    <Compile Include="ViewModel\UserActionCommand.cs" />
     <Compile Include="ViewModel\UserUtils.cs" />
     <Page Include="Login.xaml">
       <SubType>Designer</SubType>
