--- a/TemaHotel/TemaHotel/TemaHotel.csproj
+++ b/TemaHotel/TemaHotel/TemaHotel.csproj
@@ -67,6 +67,9 @@
     <Compile Include="DataAccess\OperationResult.cs" />
     <Compile Include="DataAccess\RoomServiceLayer.cs" />
     <Compile Include="DataAccess\UserServiceLayer.cs" />
+    <Compile Include="Manage.xaml.cs">
+      <DependentUpon>Manage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ManageUsers.xaml.cs">
       <DependentUpon>ManageUsers.xaml</DependentUpon>
     </Compile>
@@ -76,7 +79,7 @@
     </Compile>
     <Compile Include="Utilities\PercentageConverter.cs" />
     <Compile Include="Utilities\RelayCommand.cs" />
-    <Compile Include="ViewModel\MainWindowVm.cs" />
+    <Compile Include="ViewModel\ManageVm.cs" />
     <Compile Include="ViewModel\ManageUsersVM.cs" />
     <Compile Include="ViewModel\MenuCommands.cs" />
     <Compile Include="ViewModel\RoomUtils.cs" />
@@ -96,6 +99,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Manage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="ManageUsers.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -138,7 +145,9 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\signupback.jpg" />
@@ -146,7 +155,12 @@
   <ItemGroup>
     <Resource Include="Resources\testroom.jpg" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Resources\hotelUser.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\bluesky.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
