--- a/TemaHotel/TemaHotel/App.config
+++ b/TemaHotel/TemaHotel/App.config
@@ -10,6 +10,9 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
+  <runtime>
+    <loadFromRemoteSources enabled="true"/>
+  </runtime>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
